fixed text alignment on cards

--- a/src/components/Players/Card.css
+++ b/src/components/Players/Card.css
@@ -9,3 +9,7 @@
     width: 50%;
     margin-bottom: 5%;
 }
+
+.tr {
+  text-align: left;
+}
